--- a/FrontEnd/Pages/Persons/ListPersons.cshtml
+++ b/FrontEnd/Pages/Persons/ListPersons.cshtml
@@ -9,7 +9,6 @@
         <tr>
             <td>Id</td>
             <td>Name</td>
-            <td>Date of Birth</td>
             <td>Detail</td>
         </tr>
 
@@ -18,10 +17,9 @@
         <tr>
             <td>@person.PersonId</td>
             <td>@person.Name</td>
-            <td>@person.DateOfBirth</td>
             <td>
-                <a class="btn btn-primary table-btn" asp-page="./Detail" asp-route-saludoId="@person.PersonId">
-                    Detalle
+                <a class="btn btn-primary table-btn" asp-page="./DetailPerson" asp-route-pk="@person.PersonId">
+                    Detail
                 </a>
             </td>
         </tr>
