--- a/FrontEnd/Pages/Persons/ListPersons.cshtml
+++ b/FrontEnd/Pages/Persons/ListPersons.cshtml
@@ -1,24 +1,23 @@
 ﻿@page
-@model FrontEnd.ListPersonsModel
+@model FrontEnd.ListModel
 @{
 }
-<h1>List of Persons</h1>
+<h1>List of Entities</h1>
 
 <table class="table">
-
         <tr>
             <td>Id</td>
             <td>Name</td>
             <td>Detail</td>
         </tr>
 
-    @foreach (var person in Model.Persons)
+    @foreach (var entity in Model.Entities)
     {
         <tr>
-            <td>@person.PersonId</td>
-            <td>@person.Name</td>
+            <td>@entity.PersonId</td>
+            <td>@entity.Name</td>
             <td>
-                <a class="btn btn-primary table-btn" asp-page="./DetailPerson" asp-route-pk="@person.PersonId">
+                <a class="btn btn-primary table-btn" asp-page="./Detail" asp-route-pk="@entity.PersonId">
                     Detail
                 </a>
             </td>
