Refactor even more...

--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -7,5 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <br>
-     <a asp-page="/Persons/ListPersons">Persons</a>
+     <a asp-page="/Persons/List">Persons</a>
 </div>
