--- a/FrontEnd/Pages/Persons/Detail.cshtml
+++ b/FrontEnd/Pages/Persons/Detail.cshtml
@@ -9,4 +9,4 @@
 <div>
     Date of Birth: @Model.Entity.DateOfBirth
 </div>
-<a asp-page="./ListPersons" class="btn-default">Back to List</a>
+<a asp-page="./List" class="btn-default">Back to List</a>
