Minor html fixes

--- a/FrontEnd/Pages/Persons/List.cshtml
+++ b/FrontEnd/Pages/Persons/List.cshtml
@@ -8,7 +8,7 @@
         <tr>
             <td>Id</td>
             <td>Name</td>
-            <td>Detail</td>
+            <td>Action</td>
         </tr>
 
     @foreach (var entity in Model.Entities)
