--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -7,5 +7,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <br>
+    <div>
      <a asp-page="/Persons/List">Persons</a>
+    </div>
 </div>
