--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -8,6 +8,9 @@
     <h1 class="display-4">Welcome</h1>
     <br>
     <div>
-     <a asp-page="/Persons/List">Persons</a>
+        <a asp-page="/Persons/List">Persons</a>
+    </div>
+    <div>
+        <a asp-page="/Managers/List">Managers</a>
     </div>
 </div>
