Fix Managers List page

--- a/FrontEnd/Pages/Managers/List.cshtml
+++ b/FrontEnd/Pages/Managers/List.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model FrontEnd.Pages.Persons.ListModel
+@model FrontEnd.Pages.Managers.ListModel
 @{
 }
-<h1>List of Entities</h1>
+<h1>List of Managers</h1>
 
 <table class="table">
         <tr>
