--- a/FrontEnd/Pages/Persons/List.cshtml
+++ b/FrontEnd/Pages/Persons/List.cshtml
@@ -2,7 +2,7 @@
 @model FrontEnd.Pages.Persons.ListModel
 @{
 }
-<h1>List of Entities</h1>
+<h1>List of Persons</h1>
 
 <table class="table">
         <tr>
