Add Pages for List and Detail of Clients

--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -13,4 +13,7 @@
     <div>
         <a asp-page="/Managers/List">Managers</a>
     </div>
+    <div>
+        <a asp-page="/Clients/List">Clients</a>
+    </div>
 </div>
