Add List view to FrontEnd for Employees

--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -11,6 +11,9 @@
         <a asp-page="/Persons/List">Persons</a>
     </div>
     <div>
+        <a asp-page="/Employees/List">Employees</a>
+    </div>
+    <div>
         <a asp-page="/Managers/List">Managers</a>
     </div>
     <div>
