Fix Cancel button functionality in Edit page

--- a/FrontEnd/Pages/Persons/Edit.cshtml
+++ b/FrontEnd/Pages/Persons/Edit.cshtml
@@ -15,7 +15,10 @@
     </div>
     <div>
         <button type="submit" class="btn btn-success">Update</button>
-        <button class="btn btn-danger">Cancel</button>
+        <a asp-page="./List" class="btn btn-danger">
+            Cancel
+        </a>
+
     </div>
 
 </form>
