Add Create functionality for Persons in FrontEnd

--- a/FrontEnd/Pages/Persons/Edit.cshtml
+++ b/FrontEnd/Pages/Persons/Edit.cshtml
@@ -14,15 +14,12 @@
         <input type="date" asp-for="Entity.DateOfBirth" class="form-control">
     </div>
     <div>
-        <button type="submit" class="btn btn-success">Update</button>
+        <button type="submit" class="btn btn-success">Save</button>
         <a asp-page="./List" class="btn btn-danger">
             Cancel
         </a>
-
     </div>
-
 </form>
-
 
 <br>
 
