--- a/FrontEnd/Pages/Persons/Edit.cshtml
+++ b/FrontEnd/Pages/Persons/Edit.cshtml
@@ -8,10 +8,13 @@
     <div class="form-group">
         <label asp-for="Entity.Name"></label>
         <input asp-for="Entity.Name" class="form-control">
+        <span class="text-danger" asp-validation-for="Entity.Name"></span>
     </div>
     <div>
         <label asp-for="Entity.DateOfBirth"></label>
         <input type="date" asp-for="Entity.DateOfBirth" class="form-control">
+        <span class="text-danger" asp-validation-for="Entity.DateOfBirth"></span>
+
     </div>
     <div>
         <button type="submit" class="btn btn-success">Save</button>
