Increase font for links to entities in Index page

--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -7,16 +7,33 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <br>
+
     <div>
-        <a asp-page="/Persons/List">Persons</a>
+        <a asp-page="/Persons/List">
+            <h2>
+                Persons
+            </h2>
+        </a>
     </div>
     <div>
-        <a asp-page="/Employees/List">Employees</a>
+        <a asp-page="/Employees/List">
+            <h2>
+                Employees
+            </h2>
+        </a>
     </div>
     <div>
-        <a asp-page="/Managers/List">Managers</a>
+        <a asp-page="/Managers/List">
+            <h2>
+                Managers
+            </h2>
+        </a>
     </div>
     <div>
-        <a asp-page="/Clients/List">Clients</a>
+        <a asp-page="/Clients/List">
+            <h2>
+                Clients
+            </h2>
+        </a>
     </div>
 </div>
