--- a/FrontEnd/Pages/Persons/List.cshtml
+++ b/FrontEnd/Pages/Persons/List.cshtml
@@ -24,13 +24,18 @@
                 <td>@entity.Name</td>
                 @* <td>@entity.Discriminator</td> *@
                 <td>
-                    <a class="btn btn-primary table-btn" asp-page="./Detail" asp-route-pk="@entity.PersonId">
+                    <a class="btn btn-info table-btn" asp-page="./Detail" asp-route-pk="@entity.PersonId">
                         Detail
                     </a>
                 </td>
                 <td>
                     <a class="btn btn-primary table-btn" asp-page="./Edit" asp-route-pk="@entity.PersonId">
                         Edit
+                    </a>
+                </td>
+                                <td>
+                    <a class="btn btn-danger table-btn" asp-page="./Delete" asp-route-pk="@entity.PersonId">
+                        Delete
                     </a>
                 </td>
             </tr>
