--- a/FrontEnd/Pages/Persons/Edit.cshtml
+++ b/FrontEnd/Pages/Persons/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <h2>Please fill in the information:</h2>
-<form method="POST" action="">
+<form method="POST">
     <input type="hidden" asp-for="Entity.PersonId">
     <div class="form-group">
         <label asp-for="Entity.Name"></label>
