--- a/FrontEnd/Pages/Persons/List.cshtml
+++ b/FrontEnd/Pages/Persons/List.cshtml
@@ -10,6 +10,7 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
+            <th>Type</th>
             <th>
                 <a class="btn btn-success" asp-page="./Edit">
                     Add
@@ -22,7 +23,7 @@
             <tr>
                 <td>@entity.PersonId</td>
                 <td>@entity.Name</td>
-                @* <td>@entity.Discriminator</td> *@
+                <td>@entity.Discriminator</td>
                 <td>
                     <a class="btn btn-info table-btn" asp-page="./Detail" asp-route-pk="@entity.PersonId">
                         Detail
