Add Companies link to main menu and list view

--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -36,4 +36,15 @@
             </h2>
         </a>
     </div>
+    <div>
+        <hr>
+    </div>
+    <br>
+    <div>
+        <a asp-page="/Companies/List">
+            <h2>
+                Companies
+            </h2>
+        </a>
+    </div>
 </div>
