Add Cancel button to Delete page for Person

--- a/FrontEnd/Pages/Persons/Delete.cshtml
+++ b/FrontEnd/Pages/Persons/Delete.cshtml
@@ -17,6 +17,9 @@
     </div>
     <div>
         <button type="submit" class="btn btn-danger">Delete</button>
+        <a asp-page="./List" class="btn btn-primary">
+            Cancel
+        </a>
     </div>
 </form>
 
