--- a/FrontEnd/Pages/Index.cshtml
+++ b/FrontEnd/Pages/Index.cshtml
@@ -8,43 +8,65 @@
     <h1 class="display-4">Welcome</h1>
     <br>
 
-    <div>
-        <a asp-page="/Persons/List">
-            <h2>
-                Persons
-            </h2>
-        </a>
-    </div>
-    <div>
-        <a asp-page="/Employees/List">
-            <h2>
-                Employees
-            </h2>
-        </a>
-    </div>
-    <div>
-        <a asp-page="/Managers/List">
-            <h2>
-                Managers
-            </h2>
-        </a>
-    </div>
-    <div>
-        <a asp-page="/Clients/List">
-            <h2>
-                Clients
-            </h2>
-        </a>
-    </div>
-    <div>
-        <hr>
-    </div>
-    <br>
-    <div>
-        <a asp-page="/Companies/List">
-            <h2>
-                Companies
-            </h2>
-        </a>
-    </div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <div>
+            <a asp-page="/Persons/List">
+                <h2>
+                    Persons
+                </h2>
+            </a>
+        </div>
+        <div>
+            <a asp-page="/Employees/List">
+                <h2>
+                    Employees
+                </h2>
+            </a>
+        </div>
+        <div>
+            <a asp-page="/Managers/List">
+                <h2>
+                    Managers
+                </h2>
+            </a>
+        </div>
+        <div>
+            <a asp-page="/Clients/List">
+                <h2>
+                    Clients
+                </h2>
+            </a>
+        </div>
+        <div>
+            <hr>
+        </div>
+        <br>
+        <div>
+            <a asp-page="/Companies/List">
+                <h2>
+                    Companies
+                </h2>
+            </a>
+        </div>
+
+        <a class="btn btn-danger" asp-area="Identity" asp-page="/Account/Logout">Logout</a>
+        @* <br>
+            <table class="table table-sm">
+            @foreach (var claim in User.Claims)
+            {
+            <tr>
+            <td>@claim.Type</td>
+            <td>@claim.Value</td>
+            </tr>
+            }
+            </table> *@
+
+    }
+    else
+    {
+        <a class="btn btn-success" asp-area="Identity" asp-page="/Account/Login">Login</a>
+    }
+
+
 </div>
